# incubator-devlake

./: Dockerfile  Makefile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  env
.github/workflows/: build.yml  buildx.yml  deploy-test.yml  yaml-lint.yml
backend/plugins/gitextractor/tasks/: clone.go  git_repo_collector.go
backend/plugins/jenkins/models/: build.go  response.go
backend/plugins/jenkins/models/migrationscripts/: 20240330_add_parameters_for_builds.go
backend/plugins/jenkins/tasks/: build_cicd_convertor.go  build_extractor.go  shared.go  stage_convertor.go  stage_extractor.go
backend/plugins/zentao/models/: bug.go
backend/plugins/zentao/tasks/: bug_extractor.go
backend/python/plugins/gerrit/: pyproject.toml
backend/python/plugins/gerrit/gerrit/: api.py  main.py  migrations.py  models.py
backend/python/plugins/gerrit/gerrit/streams/: change_commits.py  changes.py
backend/python/plugins/gerrit/tests/: lp_test.py  plugin_test.py  stream_test.py
backend/python/pydevlake/pydevlake/: message.py
config-ui/: webpack.config.js
config-ui/src/plugins/: config.ts  utils.ts
config-ui/src/plugins/register/: index.ts
config-ui/src/plugins/register/gerrit/: config.tsx
deployment/helm/templates/: deployments.yaml  statefulsets.yaml
