[tool.poetry]
name = "gerrit"
version = "0.1.0"
description = ""
authors = ["Ji Bin <matrixji@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydevlake = { path = "../../pydevlake", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
